Fix for aberrant behaviour of new dashboard on IE.
git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@5085 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-framing.css
+++ b/resources/css/kt-framing.css
@@ -786,22 +786,26 @@ The text will be hidden for screen view.  The generic fahrner-ish approach comes
 /* dashboard blocks. */
 
 #dashboard-container-left { 
+    clear: left;
     width: 45%;
-    padding-right: 2em;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 2em;
     float: left;
-    padding-bottom: 2em;
+    margin-bottom: 2em;
+    
 }
 
 #dashboard-container-right { 
     width: 45%;
-    padding-right: 2em;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 2em;
     float: left;
-    padding-bottom: 2em;
+    margin-bottom: 2em;
 }
 
 .dashboard_block {
-    float: left;
-    position: relative;
     width: 100%;
     padding-top: 2em;
 }
